# QtStudentDBManager

./: .gitignore  2024-01-10 21-33-01.mkv  2024-01-11 12-49-17.mkv  AddStudentForm.qml  CMakeLists.txt  ClientDatabase.cpp  ClientDatabase.h  DatabaseOperations.cpp  DatabaseOperations.h  NetworkMessage.cpp  NetworkMessage.h  Notes.txt  README.md  ServerDatabase.cpp  ServerDatabase.h  Settings.h  Student.cpp  Student.h  StudentDatabase.cpp  StudentDatabase.h  StudentForm.qml  StudentModel.cpp  StudentModel.h  StudentServer.cpp  StudentServer.h  StudentView.qml  StudentsListView.qml  UpdateStudentForm.qml  client.cpp  config.ini  main.cpp  main.qml  main_client.cpp  main_server.cpp  main_sync.cpp  qml.qrc  res.qrc  server.cpp  studentmodel.cpp  studentmodel.h
.github/workflows/: GitHubActions.yml  cmake-single-platform.yml
